target/release/build/rayon-ad1e858b56d5d8ea/stderr
error[E0658]: use of unstable library feature 'control_flow_enum': new API
 --> <anon>:1:9
  |
1 | pub use std::ops::ControlFlow;
  |         ^^^^^^^^^^^^^^^^^^^^^
  |
  = note: see issue #75744 <https://github.com/rust-lang/rust/issues/75744> for more information
  = help: add `#![feature(control_flow_enum)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
